# pwnc

./: .gitignore  README.md  TODO.md  demo.py  gdbinit  gdbscript.py  gdbserver.py  initramfs.cpio  pwnc.py  pwnq  pwnq.py  pyproject.toml  test.py  testing.py
dwarf/: .gitignore  Makefile  README.md  chal  dwarf.c  extract.py  location  location.c  test.c  testing.c  thing  thing.c
dwarf/plugin/: README.md  __init__.py  config.py  connect.py  extract.py  first.txt  firts.txt  gdbinit.py  server.py  test
dwarf/plugin/client/: gdb.py
dwarf/plugin/teemo/: __init__.py  config.py  connect.py  extract.py  server.py
dwarf/troll/: Cargo.toml  Makefile  fixup.py  test.py
dwarf/troll/src/: lib.rs  main.rs
fuzz/: test  test.c  test.py
kmod/: Makefile  stop.c
other/: test  test.c  test.debug
pwnc/: __init__.py  cache.py  config.py  err.py  pwn.py  pwncli.py  types.py  util.py
pwnc/commands/: elf.py  errno.py  patch.py  search.py  unpack.py  unstrip.py
pwnc/commands/docker/: extract.py
pwnc/commands/init/: __init__.py
pwnc/container/: __init__.py
pwnc/gdb/: bridge.py  launch.py  new_bridge.py  new_launch.py  protocol.py  stupid-hack.py
pwnc/glibc/: __init__.py  fsop_wide.py  ptr_mangle.py
pwnc/kernel/: util.py
pwnc/minelf/: __init__.py
pwnc/shellcode/: __init__.py  assemble.py  build.py  nasm.py
pwnc/types/: __init__.py  containers.py  serial.py  value.py
scripts/: patch.py
tests/: test.py  testing.py
tests/angry-gadget/: binja.py  custom.py  gadget.py  old.py  test.asm  test.py
tests/profiling/: README.md  profile_pwnc_startup.py
(+59 files in other folders)
