[tool.poetry]
name = "pwnc"
version = "0.1.0"
description = ""
authors = ["unvariant <unvariant.winter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pwntools = "^4.13.1"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
